Added search functionality

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
 
     <link rel="stylesheet" href="./styles.css" />
-    <script type="module" src="src/js/controller.js"></script>
+    <script type="module" src="./scripts/controller.js"></script>
 
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
